update swagger & fix bugs
